@@ -48,11 +48,11 @@ use Carp;
 use Astro::Catalog;
 use Astro::Catalog::Star;
 
-'$Revision: 1.7 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.8 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 =head1 REVISION
 
-$Id: 2MASS.pm,v 1.7 2003/08/26 19:53:02 aa Exp $
+$Id: 2MASS.pm,v 1.8 2003/09/24 17:03:51 aa Exp $
 
 =begin __PRIVATE_METHODS__
 
@@ -121,7 +121,7 @@ sub _get_default_options {
 
 =item B<_parse_query>
 
-Private function used to parse the results returned in an GSC query.
+Private function used to parse the results returned in an 2MASS query.
 Should not be called directly. Instead use the querydb() assessor method to 
 make and parse the results.
 
@@ -131,13 +131,82 @@ sub _parse_query {
   my $self = shift;
 
   #print $self->{BUFFER};
-  return new Astro::Catalog( Format => 'TST', Data => $self->{BUFFER},
-			     Origin => '2MASS Catalogue',
-			     ReadOpt => {
-					 ra_col => 1,
-					 dec_col => 2,
-					}
-			   );
+  my $query = new Astro::Catalog( Format  => 'TST', 
+                                  Data => $self->{BUFFER},
+			          Origin  => '2MASS Catalogue',
+			          ReadOpt => { ra_col => 1, dec_col => 2, } );
+  
+  # Grab each star in the catalog and add some value to it
+  my $catalog = new Astro::Catalog( );
+  $catalog->origin( $query->origin() );
+  $catalog->set_coords( $query->get_coords() ) if defined $query->get_coords(); 
+  
+  my @stars;  
+  foreach my $i ( 0 ... $query->sizeof() ) {
+    
+    my $star = $query->popstar();
+        
+    # Ungodly hack warning...
+    # -----------------------
+    # We have J, H and K magnitudes, we probably also want some 
+    # colours, so lets generate some here and push it into the 
+    # star object. This is 2MASS specific so goes here, but in
+    # reality we probably want something general in Star.pm which
+    # dynamically generates colours and errors depending on the
+    # stored magnitudes.
+    
+    # generate the colours
+    my $j_minus_h = $star->get_magnitude( 'J' ) -
+                    $star->get_magnitude( 'H' ) if defined $star;
+                    
+    my $j_minus_k = $star->get_magnitude( 'J' ) -
+                    $star->get_magnitude( 'K' ) if defined $star;
+                    
+    my $h_minus_k = $star->get_magnitude( 'H' ) -
+                    $star->get_magnitude( 'K' ) if defined $star;
+     
+    # generate the deltas
+    my $delta_j = $star->get_errors( 'J' ) if defined $star;
+    my $delta_h = $star->get_errors( 'H' ) if defined $star;
+    my $delta_k = $star->get_errors( 'K' ) if defined $star;
+       
+    # quick kludge, stars without errors will get flagged bad anyway   
+    $delta_j = 0.000 unless defined $delta_j;
+    $delta_h = 0.000 unless defined $delta_h;
+    $delta_k = 0.000 unless defined $delta_k;
+    
+    my $delta_jmh = ( ( $delta_j ** 2.0 ) + ( $delta_h ** 2.0 ) ) ** (1.0/2.0);
+    my $delta_jmk = ( ( $delta_j ** 2.0 ) + ( $delta_k ** 2.0 ) ) ** (1.0/2.0);
+    my $delta_hmk = ( ( $delta_h ** 2.0 ) + ( $delta_k ** 2.0 ) ) ** (1.0/2.0);
+
+    # fudge accuracy for readable catalogues
+    $j_minus_h = sprintf("%.4f", $j_minus_h ) if defined $star;
+    $j_minus_k = sprintf("%.4f", $j_minus_k ) if defined $star;
+    $h_minus_k = sprintf("%.4f", $h_minus_k ) if defined $star;     
+    $delta_jmh = sprintf("%.4f", $delta_jmh ) if defined $star;
+    $delta_jmk = sprintf("%.4f", $delta_jmk ) if defined $star;
+    $delta_hmk = sprintf("%.4f", $delta_hmk ) if defined $star;
+
+    # generate the hashes
+    my %colours = ( 'J-H' => $j_minus_h,
+                    'J-K' => $j_minus_k, 
+                    'H-K' => $h_minus_k ) if defined $star;
+    
+    my %col_errors = ( 'J-H' => $delta_jmh,
+                       'J-K' => $delta_jmk, 
+                       'H-K' => $delta_hmk ) if defined $star;
+    
+    # append to star object
+    $star->colours( \%colours ) if defined $star;
+    $star->colerr( \%col_errors ) if defined $star;
+
+    push (@stars, $star ) if defined $star;
+         
+  }
+  $catalog->pushstar( @stars );  
+     
+  # return the modified catalogue                         
+  return $catalog;                         
 }
 
 
